# blob-wrangler

./: .gitignore  .gitlab-ci.yml  .packit.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.BSD-3-Clause  README.md  blob-wrangler.openrc  blob-wrangler.service  droid-juicer.openrc  droid-juicer.service  rust-blob-wrangler.spec  rust2rpm.toml
.github/workflows/: ci.yml  release-plz.yml
configs/: README.md  fairphone,fp4.toml  fairphone,fp5.toml  google,blueline.toml  google,bonito-sdc.toml  google,sargo.toml  google,sunfish.toml  nothing,spacewar.toml  oneplus,enchilada.toml  oneplus,fajita.toml  pine64,pinenote.toml  samsung,starqltechn.toml  shift,axolotl.toml  shift,otter.toml  xiaomi,beryllium-ebbg.toml  xiaomi,beryllium.toml  xiaomi,davinci.toml  xiaomi,polaris.toml
src/: firmware.rs  main.rs  utils.rs
