[package]
name = "blob-wrangler"
homepage = "https://github.com/samcday/blob-wrangler"
description = "Extract firmware from Android vendor partitions"
authors = [ "Arnaud Ferraris <aferraris@debian.org>" ]
version = "0.4.2"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
goblin = "0.9"
sys-mount = "3.0"
uname = "0.1"
fs_extra = "1"
pretty_env_logger = "0.5"
log = "0.4"
