[package]
name = "blob-wrangler"
homepage = "https://github.com/samcday/blob-wrangler"
description = "Extract firmware from Android vendor partitions"
authors = [ "Sam Day <me@samcday.com>" ]
version = "0.0.1"
license = "MIT AND BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
goblin = "0.9"
sys-mount = "3.0"
uname = "0.1"
fs_extra = "1"
pretty_env_logger = "0.5"
log = "0.4"
