[package]
name = "blob-wrangler"
homepage = "https://github.com/samcday/blob-wrangler"
description = "Extract firmware from Android vendor partitions"
authors = [ "Sam Day <me@samcday.com>" ]
version = "0.0.1"
license = "MIT AND BSD-3-Clause"
edition = "2024"
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "LICENSE.BSD-3-Clause",
    "README.md",
    "blob-wrangler.service",
    "configs/*.toml",
    "configs/README.md",
    "src/**/*.rs",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
goblin = "0.9"
nix = { version = "0.31", default-features = false, features = ["mount"] }
fs_extra = "1"
pretty_env_logger = "0.5"
log = "0.4"
